Changed the input type for some fields

--- a/my_project/index_amigos.html
+++ b/my_project/index_amigos.html
@@ -124,7 +124,7 @@
   <input type="text" id="meeting address" name="meeting address"><br><br>
   
   <label for="mail">Mail:</label>
-  <input type="text" id="mail" name="mail"><br><br>
+  <input type="email" id="mail" name="mail"><br><br>
   
   <label for="contact">Contact:</label>
   <input type="text" id="contact" name="contact"><br><br>
