Added the right input field

--- a/my_project/index_amigos.html
+++ b/my_project/index_amigos.html
@@ -127,7 +127,7 @@
   <input type="email" id="mail" name="mail"><br><br>
   
   <label for="contact">Contact:</label>
-  <input type="text" id="contact" name="contact"><br><br>
+  <input type="number" id="contact" name="contact"><br><br>
   
   <label for="status">Status:</label>
   <input type="text" id="status" name="status"><br><br>
