--- a/my_project/index.html
+++ b/my_project/index.html
@@ -115,7 +115,7 @@
    </div>
    
 <form action="/action_page.php">
-   <label for="slot-id">Slod ID:</label><br>
+   <label for="slot-id">Slot ID:</label><br>
     
   <label for="name">Name:</label>
   <input type="text" id="fname" name="fname"><br><br>
