Corrected the errors for the html file

--- a/my_project/index.html
+++ b/my_project/index.html
@@ -81,7 +81,7 @@
                <ul>
                   <li onclick ="tabs(0)" class="user-post active">Post</li>
                    <li onclick ="tabs(1)" class="user-review">Reviews</li>
-                   <li nclick ="tabs{2}" class="user-setting">Settings</li>
+                   <li onclick ="tabs{2}" class="user-setting">Settings</li>
                </ul>
             </div>
             <div class="profile-body">
@@ -126,11 +126,11 @@
   <label for="gender">Gender:</label>
   <input type="text" id="gender" name="gender"><br><br>
   
-  <label for="personal address">Personal Address:</label>
-  <input type="text" id="personal address" name="Personal Address"><br><br>
+  <label for="personal-address">Personal Address:</label>
+  <input type="text" id="personal-address" name="Personal Address"><br><br>
   
   <label for="meeting">Meeting Address:</label>
-  <input type="text" id="meeting address" name="meeting address"><br><br>
+  <input type="text" id="meeting-address" name="meeting address"><br><br>
   
   <label for="mail">Mail:</label>
   <input type="email" id="mail" name="mail"><br><br>
