--- a/my_project/index.html
+++ b/my_project/index.html
@@ -115,9 +115,9 @@
    </div>
    
 <form action="/action_page.php">
-   <label for="slot-id">Slot ID:</label><br>
+   <label>Slot ID:</label><br>
     
-  <label for="name">Name:</label>
+  <label>Name:</label>
   <input type="text" id="fname" name="fname"><br><br>
   
   <label for="designation">Designation: </label>
@@ -129,7 +129,7 @@
   <label for="personal-address">Personal Address:</label>
   <input type="text" id="personal-address" name="Personal Address"><br><br>
   
-  <label for="meeting">Meeting Address:</label>
+  <label>Meeting Address:</label>
   <input type="text" id="meeting-address" name="meeting address"><br><br>
   
   <label for="mail">Mail:</label>
