--- a/my_project/index.html
+++ b/my_project/index.html
@@ -129,7 +129,7 @@
   <label for="personal-address">Personal Address:</label>
   <input type="text" id="personal-address" name="Personal Address"><br><br>
   
-  <label>Meeting Address:</label>
+  <label for="meeting-address">Meeting Address:</label>
   <input type="text" id="meeting-address" name="meeting address"><br><br>
   
   <label for="mail">Mail:</label>
