--- a/Stylish_Login_And_Reg_Form/index.html
+++ b/Stylish_Login_And_Reg_Form/index.html
@@ -6,14 +6,27 @@
 <body>
 	<div class="login-page">
 	<div class="form">
-		<form class="register">
-		<input type="text" placeholder="name"/>
-		<input type="text" placeholder="password"/>
-		<input type="text" placeholder="email id"/>
+		<form class="register-form">
+			<input type="text" placeholder="user name"/>
+			<input type="text" placeholder="password"/>
+			<input type="text" placeholder="email id"/>
 		<button>Create</button>
-		
+		<p class="message">Already Registered Dude?<a href="#">Login</a>
+		</p>	
 		</form>
-
+		<form class="login-form">
+			<input type="text" placeholder="user name"/>
+			<input type="password" placeholder="password"/>
+			<button>login</button>
+				<p class="message">Not Registered?Friend?<a href="#">Register</a>
+				</p>
 	</div>
+	</div>
+	<script src='https://code.jquery.com/jquery-3.2.1.min.js'></script>
+	<script>
+		$('.message a').click(function(){
+		$('form').animate({height:"toggle",opacity:"toggle"},"slow");
+		});
+	</script>
 <body>
 <html>
