Changed the styles and index files

--- a/Resume_Maker/index.html
+++ b/Resume_Maker/index.html
@@ -8,6 +8,50 @@
 <div class="profile-img">
 <img src="images/user.jpg">
 </div>
+<div class="profile-info">
+	<h1>Cardigan Smith</h1>
+	<p="about">Make your Resume with me today and subscribe to my GitHub page. We enjoy blabalbalbalbalblalblabalblblabla to press the bell icon to get immediate notifications of new blalbalbalbabababa.</p>
+
+	<p="about">Make your Resume with me today and subscribe to my GitHub page. We enjoy blabalbalbalbalblalblabalblblabla to press the bell icon to get immediate notifications of new blalbalbalbabababa.</p>
+
+<div class="social-media">
+	<img src="images/facebook-icon.png">
+	<img src="images/twitter-icon.png">
+	<img src="images/whatsapp-icon.png">
+</div>
+<h2>Industry/Expertise</h2>
+	<div class="expertise">
+	<img src="images/web.png">
+	<p><b>Web Design</b></p>
+	<small>
+		Make your Resume with me today and subscribe to my GitHub page. We enjoy blabalbalbalbalblalblabalblblabla to press the bell icon to get immediate notifications of new blalbalbalbabababa.
+	</small>
+	</div>
+		
+	<div class="expertise">
+	<img src="images/hacking.png">
+	<p><b>Hacking</b></p>
+	<small>
+		Make your Resume with me today and subscribe to my GitHub page. We enjoy blabalbalbalbalblalblabalblblabla to press the bell icon to get immediate notifications of new blalbalbalbabababa.
+	</small>
+	</div>
+	
+	<div class="expertise">
+	<img src="images/SEO.png">
+	<p><b>Search Engine Optimization</b></p>
+	<small>
+		Make your Resume with me today and subscribe to my GitHub page. We enjoy blabalbalbalbalblalblabalblblabla to press the bell icon to get immediate notifications of new blalbalbalbabababa.
+	</small>
+	</div>
+<h2>My Projects</h2>
+	<div class= "projects">
+	<img src="images/1.jpg">
+	<img src="images/2.jpg">
+	<img src="images/3.jpg">
+	<img src="images/4.jpg">
+	<img src="images/5.jpg">
+	<img src="images/6.jpg">
+</div>
 
 </body>
 </html>
