Added the index.html file

--- a/Resume_Maker/index.html
+++ b/Resume_Maker/index.html
@@ -43,15 +43,40 @@
 		Make your Resume with me today and subscribe to my GitHub page. We enjoy blabalbalbalbalblalblabalblblabla to press the bell icon to get immediate notifications of new blalbalbalbabababa.
 	</small>
 	</div>
-<h2>My Projects</h2>
-	<div class= "projects">
-	<img src="images/1.jpg">
-	<img src="images/2.jpg">
-	<img src="images/3.jpg">
-	<img src="images/4.jpg">
-	<img src="images/5.jpg">
-	<img src="images/6.jpg">
+	<h2>My Projects</h2>
+		<div class= "projects">
+			<img src="images/1.jpg">
+			<img src="images/2.jpg">
+			<img src="images/3.jpg">
+			<img src="images/4.jpg">
+			<img src="images/5.jpg">
+			<img src="images/6.jpg">
+		</div>
+		<div class="form-box">
+		<h2>Contact</h2>
+		<form>
+			<!--I am going to add 2 input fields on the same horizontal line -->
+			<div class="input-group">
+			<input type="text" placeholder="First Name">
+			<input type="text" placeholder="Last Name">
+			</div>
+			
+			<div class="input-group">
+			<input type="number" placeholder="Phone Number">
+			<input type="email" placeholder="Email">
+			</div>
+			
+			
+			<div class="text-area">
+				<textarea rows="4" placeholder="Your Message"> </textarea>
+			</div>
+			<button type="submit" class="submit-btn">SEND MESSAGE<button>
+		</form>
+		</div>
+		<div class="contact">
+			<img src="images/gmail.png">
+			<img src="images/phone.png">
+		</div>
 </div>
-
 </body>
 </html>
