Finished The Form

--- a/Resume_Maker/index.html
+++ b/Resume_Maker/index.html
@@ -74,9 +74,11 @@
 		</form>
 		</div>
 		<div class="contact">
-			<img src="images/gmail.png">
-			<img src="images/phone.png">
+			<span><img src="images/gmail.png">blablabla@gmail.com</span>
+
+			<span><img src="images/phone.png">+1(512)222-2222</span>
 		</div>
+		<p class="cont">Feel Free To Reach Out</p>
 </div>
 </body>
 </html>
