This was done using a CB using Nelan's Help in C()()(), C++, C#, Python....

--- a/Stylish_Login_And_Reg_Form/index.html
+++ b/Stylish_Login_And_Reg_Form/index.html
@@ -18,7 +18,7 @@
 			<input type="text" placeholder="user name"/>
 			<input type="password" placeholder="password"/>
 			<button>login</button>
-				<p class="message">Not Registered?Friend?<a href="#">Register</a>
+			<p class="message"> Not Registered?<br><a href="#">Register</a>
 				</p>
 	</div>
 	</div>
