Files are now UP this should display normally

--- a/Simple_Website_WBootstrap/index.html
+++ b/Simple_Website_WBootstrap/index.html
@@ -104,7 +104,84 @@
 				<div class="col-md-6">
 					<img src="images/feature.png">
 				</div>
+
+				<div class="col-md-6">
+					<h2>Is A C-Lover, Assembly and LOW-Level<br> and enjoys listening to T.Swift</h2>
+					<p> Lorem ipsum, or lipsum as sometimes <br>known, is dummy text used in</p>
+					<a href="#">Sign Up Now</a>
+				</div>
 			</div>
+		</div>
+	</section>
+
+
+	<section class="services">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6">
+					<img src="images/feature.png">
+				</div>
+
+				<div class="col-md-6">
+					<h2>Life Is Good When You Give 6342 a hard Time in Python and Calculus<br> and enjoys listening to T.Swift</h2>
+					<p> Lorem ipsum, or lipsum as sometimes <br>known, is dummy text used in</p>
+					<a href="#">Explore Now</a>
+				</div>
+
+				<div class="col-md-6">
+					<img src="images/explore.png">
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<section class="review">
+		<div class="container">
+         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/testimonial-1.png">
+      <div class="carousel-caption">
+        <h6>Nelan Loves C</h6>
+	<small>Best C Tutor @ Highland</small>
+	<p>Lorem ipsum, or lipsum as sometimes <br> known isa vitae elit libero used in blabla.Lorem ipsum, or lipsum as sometimes <br> known isa vitae elit libero used in blabla.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="images/testimonial-2.png">
+      <div class="carousel-caption">
+        <h6>Nelan Loves C</h6>
+	<small>Best C Tutor @ Highland</small>
+	<p>Lorem ipsum, or lipsum as sometimes <br> known isa vitae elit libero used in blabla.Lorem ipsum, or lipsum as sometimes <br> known isa vitae elit libero used in blabla.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="images/testimonial-3.png">
+      <div class="carousel-caption">
+        <h6>Has An Obsession TSwift@InfoS </h6>
+	<small>Enjoys Working With Machine Code</small>
+	<p>Lorem ipsum, or lipsum as sometimes <br> known isa vitae elit libero used in blabla.Lorem ipsum, or lipsum as sometimes <br> known isa vitae elit libero used in blabla.</p>
+      </div>
+    </div>
+  </div>
+</div>
+		</div>
+	</div>
+	</section>
+	<section class="footer text-center">
+		<div class="container">
+			<h2>Book With Us A Session Today</h2>
+			<form> <!-- SUBSCRIPTION FORM -->
+				<input type="email" placeholder="Enter Your Email Address" required>
+				<button type="submit">SUBSCRIBE</button>
+				<small>Copyright @2526_56837_2</small>
+			</form>
+
 		</div>
 	</section>
 </body>
