THIS IS HYSTERIC HAHAHAHA

--- a/AR_Website/index.html
+++ b/AR_Website/index.html
@@ -21,7 +21,7 @@
 			width: 100%;
 			height: 100%;
 		}
-		.btn-container{
+		.robot-fs btn-container{
 			position: absolute;
 			bottom: 50px;
 			width: 100%;
@@ -53,8 +53,8 @@
 
 		<div class="btn-container">
 			<button type="button" onclick="stop()">STOP</button>
-			<button type="button" onclick="run()">RUN_TO_6342</button>
-			<button type="button" onclick="wave()">WAVE_TO_6342</button>
+			<button type="button" onclick="run()">RUN</button>
+			<button type="button" onclick="wave()">WAVE</button>
 		</div>
 	</div>
 	<!-- ABILITY TO DISPLAY 3D OBJ-->
@@ -71,8 +71,7 @@
 
 				function wave(){
 					modelViewer.animationName='Wave';
-
-
+				}
 			</script>
 </body>
 </html>
