--- a/Website5/index.html
+++ b/Website5/index.html
@@ -8,7 +8,7 @@
 	<div class="header">
 		<div class="container">
 			<div class="navbar">
-				<img src="images/logo.png" class="logo">
+				<img src="logo2.png" class="logo">
 				<nav>
 					<ul>
 						<li><a href="#">Calculus</a></li>
