Was missing a curly brace

--- a/AR_Website/index.html
+++ b/AR_Website/index.html
@@ -65,7 +65,7 @@
 					modelViewer.animationName='none';
 				}
 
-				function run()
+				function run(){
 					modelViewer.animationName='Running';
 				}
 
