space-evenly was not a justify-content correct value it should of been space-around

--- a/Respons_WebS/index.html
+++ b/Respons_WebS/index.html
@@ -42,7 +42,7 @@
 			<!--Wrapper Class of the cards -->
 			<div class="cards-wrapper">
 				<!--Creating the first card -->
-				<div class="card">
+				<div class="card A">
 					<div class="front-side">
 						<img src="images/assembly.jpg" width="200" height="200" alt="FAV PL OF 2526" class="card-image"> 
 						<h1 class="name-of-Pl">The Best PL According To Nelan</h1>
@@ -67,7 +67,7 @@
 						<button class="card-button">Book Noew To Learn More ABout C,A,C,P,MC</button>
 					</div>
 
-				<div class="card">
+				<div class="card B">
 					<div class="front-side">
 						<img src="images/tswift.jpg" width="200" height="200" alt="FAV ARTIST 2526" class="card-image"> 
 						<h1 class="name-of-Pl">The Best Artist For Nelan</h1>
