Files, videos, contact-us bg picture

--- a/Respons_WebSite/index.html
+++ b/Respons_WebSite/index.html
@@ -58,7 +58,8 @@
                             price &gt;&gt;
                         </button>
                     </div>
-                    <div class="back-side">
+		    <!--To align the items buttons in the center I add the keyword "center" to back-side -->
+                    <div class="back-side center">
                         <button class="navigation-button">
                             &lt;&lt; back
                         </button>
@@ -93,7 +94,93 @@
                         </div>
                     </div>
                 </div>
-            </section>
+	</section>
+	    <!-- 2526 56837 2/6342 Stories -->
+	<section class="stories">
+		<div class="video-container"> 
+			<video class="bg-video" autoplay loop>
+				<source src="images/video.mp4" type="video/mp4">
+			</video>
+		</div>
+		<!-- wrapper class of my stories -->
+		<div class= "stories-wrapper">
+			<div class="story-bg">
+				<div class="story">
+					<img 
+					src="images/story-img-1.jpg"
+					alt="User Image"
+					class="story-image"
+					/>
+					<div class="story-text">
+						<h1 class="story-heading">Nelan's fav classes are: 1336, 1337, 2414, 2415, CS375, CS373, CS350 and CS361</h1>
+						<p class="story-paragraph"> 2526 56837 6342, 2, 266745377, OS, and enjoys to contribute to OS Low Level Projects, he has deep knowledge in 2-426459 Langs!. He enjoys to write low level all-day everyday with 6342, 767874, 64844 and 647482.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+
+		<!-- wrapper class of my story 2 -->
+		<div class= "stories-wrapper">
+			<div class="story-bg">
+				<div class="story">
+					<img 
+					src="images/story-img-2.jpg"
+					alt="User Image"
+					class="story-image"
+					/>
+					<div class="story-text">
+						<h1 class="story-heading">Nelan 56837 2 928 866 6834!!!!</h1>
+						<p class="story-paragraph"> 2526 56837 6342, 2, 266745377, OS, and enjoys to contribute to OS Low Level Projects, he has deep knowledge in 2-426459 Langs!. He enjoys to write low level all-day everyday with 6342, 767874, 64844 and 647482.
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	    <!-- End OF 2526 56837 2/6342 Stories -->
+	<!-- Contact Section -->
+	<section class="contact">
+		<h1 class="contact-heading">Contact</h1>
+		<form class="contact-form center">
+			<div class="input-group">
+				<label>Your Full Name*<label>
+				<input type="text" class="contact-input" placeholder="Enter Your Full Name"/>
+			</div>
+			<div class=input-groups">
+				<div class="input-group">
+					<label>Your Email*<label>
+					<input type="email" class="contact-input" placeholder="Enter Your Email Address"/>
+				</div>
+				<div class="input-group">
+					<label>Your Phone Number<label>
+					<input type="text" class="contact-input" placeholder="Enter Your Phone Number"/>
+				</div>
+			</div>
+			<div class="input-group">
+				<label>Your Message</label>
+				<textarea class="form-textarea" placeholder="Place Your Message Here"></textarea>
+			</div>
+			<input type="submit" value="Submit" class="form-btn"/>
+		</form>
+	</section>
+	<!-- END OF CONTACT SECTION -->
+
+	<!-- footer -->
+	<footer class="footer">
+		<div class="footer-list">
+			<a href="#" class="footer-link">Home</a>
+			<a href="#" class="footer-link">Tours</a>
+			<a href="#" class="footer-link">About Us</a>
+			<a href="#" class="footer-link">Promotions</a>
+			<a href="#" class="footer-link">Contact</a>
+		</div>
+		<p class="footer-paraphraph">
+			Copyright &copy; 2526 56837 C All Rights Reserved
+		</p>
+	</footer>
+
         </div>
         <script src="script.js"></script>
     </body>
