--- a/Respons_WebSite/index.html
+++ b/Respons_WebSite/index.html
@@ -10,7 +10,31 @@
 </head>
 <body>
     <div class="container">
-        <!-- ASSIGNING CSS center to tag-->
+	<!-- Inserting the Navigation Bar-->
+	<div class="open-navbar-icon navbar-icon">
+		<div class="line"></div>
+		<div class="line"></div>
+		<div class="line"></div>
+
+	</div>
+	<div class="navbar-wrapper">
+		<nav class="navbar">
+			<div class="close-navbar-icon navbar-icon">
+				<div class="line line-1"></div>
+				<div class="line line-2"></div>
+			</div>
+			<div class="nav-list">
+				<a href="#" class="nav-link">Home</a>
+				<a href="#" class="nav-link">About</a>
+				<a href="#" class="nav-link">Services</a>
+				<a href="#" class="nav-link">Promotions</a>
+				<a href="#" class="nav-link">Contact</a>
+			</div>
+		</nav>
+
+	</div>
+	<!--END OF NAVIGATION BAR -->
+	<!-- ASSIGNING CSS center to tag-->
         <header class="header center">
             <div class="header-text">
                 <h1 class="heading">2526 56837 27736259</h1>
