A lot of modifications done

--- a/Respons_WebSite/index.html
+++ b/Respons_WebSite/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
 	<!-- Inserting the Navigation Bar-->
-	<div class="open-navbar-icon navbar-icon">
+	<div class="open-navbar-icon navbar-icon center">
 		<div class="line"></div>
 		<div class="line"></div>
 		<div class="line"></div>
@@ -19,7 +19,7 @@
 	</div>
 	<div class="navbar-wrapper">
 		<nav class="navbar">
-			<div class="close-navbar-icon navbar-icon">
+			<div class="close-navbar-icon navbar-icon center">
 				<div class="line line-1"></div>
 				<div class="line line-2"></div>
 			</div>
