Made Additional Changes

--- a/Respons_WebSite/index.html
+++ b/Respons_WebSite/index.html
@@ -24,11 +24,12 @@
 				<div class="line line-2"></div>
 			</div>
 			<div class="nav-list">
-				<a href="#" class="nav-link">Home</a>
-				<a href="#" class="nav-link">About</a>
-				<a href="#" class="nav-link">Services</a>
-				<a href="#" class="nav-link">Promotions</a>
-				<a href="#" class="nav-link">Contact</a>
+				<!-- Place the links within the center of the box thanks to the keyword center -->
+				<a href="#" class="nav-link center">Home</a>
+				<a href="#" class="nav-link center">About</a>
+				<a href="#" class="nav-link center">Services</a>
+				<a href="#" class="nav-link center">Promotions</a>
+				<a href="#" class="nav-link center">Contact</a>
 			</div>
 		</nav>
 
