--- a/Respons_WebSite/index.html
+++ b/Respons_WebSite/index.html
@@ -164,16 +164,35 @@
 			</div>
 		</div>
 	</section>
-	    <!-- End OF 2526 56837 2/6342 Stories -->
+		<!-- End OF 2526 56837 2/6342 Stories -->
 	<!-- Contact Section -->
 	<section class="contact">
-		<h1 class="contact-heading">Contact</h1>
+		
 		<form class="contact-form center">
-			<div class="input-group">
+			<table>
+			<tr>
+				<td><div class="input-group">
+					<label>Your Full Name*<label>
+					<input type="text" height = 50 class="contact-input" placeholder="Enter Your Full Name"/>
+					</div></td>
+				<td>				<div class="input-group">
+					<label>blah*<label>
+					<input type="text" height = 50 class="contact-input" placeholder="Enter Your Full Name"/>
+					</div></td>
+
+			</tr>
+			<!-- <tr>
+				<div class="input-group">
+				<label>Your Full Name*<label>
+				<input type="text" height = 50 class="contact-input" placeholder="Enter Your Full Name"/>
+				</div>
+			</tr> -->
+			</table>
+			<!-- <div class="input-group">
 				<label>Your Full Name*<label>
 				<input type="text" class="contact-input" placeholder="Enter Your Full Name"/>
 			</div>
-			<div class=input-groups">
+			<div class="input-groups">
 				<div class="input-group">
 					<label>Your Email*<label>
 					<input type="email" class="contact-input" placeholder="Enter Your Email Address"/>
@@ -186,7 +205,7 @@
 			<div class="input-group">
 				<label>Your Message</label>
 				<textarea class="form-textarea" placeholder="Place Your Message Here"></textarea>
-			</div>
+			</div> -->
 			<input type="submit" value="Submit" class="form-btn"/>
 		</form>
 	</section>
