--- a/Events/Keyboard_Events/index.html
+++ b/Events/Keyboard_Events/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>The HTML5 Template</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="./event-keyboard.js"></script>
 
