Fixed a typo on Line 67 value for borderColor should be yellow not Yellow

--- a/Events/Mouse/MouseEnter/Mouse-Enter.html
+++ b/Events/Mouse/MouseEnter/Mouse-Enter.html
@@ -64,7 +64,7 @@
 		document.querySelector('.over p').addEventListener('mouseover', goingOver);
 		document.querySelector('.enter p').addEventListener('mouseout', goingOutside);
 		function goingOver(ev){
-			ev.currentTarget.style.borderColor='Yellow';
+			ev.currentTarget.style.borderColor='yellow';
 			console.log('MouseOver Event Paragraph');
 		}
 		function goingOutside(ev){
