Now Colors Change And Event is raised upon Click So COOOLgit add MouseEnter/Mouse-Enter.html git add MouseEnter/Mouse-Enter.html !

--- a/Events/Mouse/MouseEnter/Mouse-Enter.html
+++ b/Events/Mouse/MouseEnter/Mouse-Enter.html
@@ -35,6 +35,10 @@
 		.orange{
 			background-color: orange;
 		}
+
+		.blue{
+			background-color: blue;
+		}
 	</style>
 </head>
 <body>
@@ -89,8 +93,8 @@
 		});
 
 		document.querySelector('.over').addEventListener('mouseover',function(event){
-					event.currentTarget.classList.add('orange');
-					console.log("The mouse over div event. Just added Orange");
+					event.currentTarget.classList.add('blue');
+					console.log("The mouse over div event. Just added Blue");
 		});
 
 
