--- a/DOM/className/index.html
+++ b/DOM/className/index.html
@@ -1,1 +1,29 @@
-<
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>DOM</title>
+    <style>
+      .btn {
+        font-size: 3rem;
+        background: lightblue;
+        text-transform: uppercase;
+      }
+    </style>
+  </head>
+  <body>
+    <h2>hello world</h2>
+    <h2>hello people</h2>
+    <ul>
+      <li class="special">C++</li>
+      <li>blue</li>
+      <li class="special">Ruby</li>
+      <li>red</li>
+      <li class="special">Java</li>
+    </ul>
+    <!-- javascript -->
+    <script src="app.js"></script>
+  </body>
+</html>
