--- a/Form_Animation/index.html
+++ b/Form_Animation/index.html
@@ -20,18 +20,18 @@
 			<i class="fas fa-arrow-down"></i>
 		</div>
 
-		<div class="field-email">
+		<div class="field-email innactive">
 			<i class="fas fa-envelope-square"></i>
 			<input type="email" placeholder="Email" required />
 			<i class="fas fa-arrow-down"></i>
 		</div>
 
-		<div class="field-password">
+		<div class="field-password innactive">
 			<i class="fas fa-key"></i>
 			<input type="password" placeholder="Password" required />
 			<i class="fas fa-arrow-down"></i>
 		</div>
-		<div class="field-finish">
+		<div class="field-finish innactive">
 			<p>Thank You for swinging By</p>
 		</div>
 	</form>
