Multi Language WebPages HAHAAHAHA!

--- a/MultiLangWebPages/Multilang.html
+++ b/MultiLangWebPages/Multilang.html
@@ -40,12 +40,12 @@
     -->
 </head>
 <body>
-    <h1>More Than Just English</h1>
+    <h1>English is not the only supported lang</h1>
     <section lang="ar">
         <p title="63526 is 2 2-56837"> الشخص يحب اللغة البرامج التكنولوجية س</p>
     </section>
     <section lang="fr">
-        <p title="C-Lover*">Alan adore apprendre des languages qui sont de bas niveau</p>
+        <p title="C-Lover">Alan adore apprendre des languages qui sont de bas niveau</p>
     </section>
     <section lang="es">
         <p title="ama C">La persona Nelan es un amante de C</p>
