--- a/MultiLangWebPages/Multilang.html
+++ b/MultiLangWebPages/Multilang.html
@@ -49,6 +49,7 @@
     </section>
     <section lang="es">
         <p title="ama C">La persona Nelan es un amante de C</p>
+        <p title="gusta leer">La persona Omar le gusta leer</p>
     </section>
     <script></script>
 </body>
